tests/type_errors/requirements_in_apply.sy
type A q = { a: q }

def f : A Int -> Int : { a } = a

--+ expected exit status: 7
--+ expected stderr:
--+ > The requirements are not valid here.
--+ 
--+ #2
--+ is not
--+ (a: _)
--+ 
--+   3| def f : A Int -> Int : { a } = a
--+      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

